-*- text -*-

2011-05-19

  * Major rewrite of the memory management and adding of resolvers.
    Now we use a linked list and always add to the head of the list.
    NOTE WELL that this means that the latest received address, even
    if it is last in a RDNSS option, will always be the first listed
    in the resolv file.

  * New option -m <maximum number of resolvers to keep>. The default
    is 3. Zero (0) mean unlimited numbers of resolvers. Note that this
    might not be supported by your resolver functions.

  * Always truncate resolv file when starting.

  * We might be RFC 6106 compliant, except that we don't support the
    DNSSL option yet.

2011-05-16

  * Now uses clock_gettime() instead of gettimeofday(). Hopefully this
    means we're not affected by changes to system time.

  * Stores files in a work directory owned by the radns user, by
    default /etc/radns.

  * Works in a temporary directory, then renames to the real radns
    resolv.conf to get atomic changes.

  * Added DNS servers that never expires.

  * Removes DNS server when asked to by RA (lifetime == 0).

2011-02-18

  * Wrote addresses even if expired or never set. Patch by Peter Chubb.

  * A constant was off by one so we lost linefeed in some scenarios.
    Patch by Peter Chubb.

  * Ported to OpenBSD. Patch by Janne Johansson.

2010-12-27

  * Embarassing bug appeared when adding aging of information. The
    resolv.conf would be written to even if we didn't get any RDNSS
    option! Now fixed.

  * Even more embarassing: mkpidfile() was called before daemon()! Now
    fixed.

  * Changed rc.d script. Can now start at boot.

2010-05-28

  * Added man page.

2010-04-30

  * Creates pid file.
  
  * Includes rc.d start script for FreeBSD.

2010-03-18

  * Handles time to live.

  * Sorts resolvers by arrival time.

  * Updates identical resolvers by upping ttl.

2010-02-26

  * Calls script when new updates arrive. Example script provided in
    radns-script.
